# rpa-price-monitor

./: .env.example  .gitignore  Dockerfile  HANDOFF.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: settings.py
output/: sample_report.xlsx
src/pricewatch/: __init__.py  bot.py  main.py
src/pricewatch/core/: browser.py  logger.py  retry.py  utils.py
src/pricewatch/models/: change.py  product.py
src/pricewatch/pages/: base_page.py  catalog_page.py
src/pricewatch/services/: history.py  notifier.py  report.py  scraper.py
tests/: test_history.py  test_models.py  test_report.py  test_utils.py
