[project]
name = "pricewatch-rpa"
version = "1.0.0"
description = "RPA bot that monitors product prices with Playwright and exports an Excel report."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "playwright>=1.44",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "xlsxwriter>=3.2",
    "loguru>=0.7",
    "tenacity>=8.3",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "pytest-cov>=5.0", "ruff>=0.4", "openpyxl>=3.1"]

[project.scripts]
pricewatch = "pricewatch.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
addopts = "-q --cov=pricewatch --cov-report=term-missing"

[tool.ruff]
line-length = 90
target-version = "py311"
src = ["src", "config", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
